--- a/src/views/components/categories/list.ejs
+++ b/src/views/components/categories/list.ejs
@@ -1,6 +1,9 @@
 <div class="content">
   <div class="container-fluid">
-    <h4 class="page-title">Danh sach san pham</h4>
+    <div class="flex items-center justify-content-between mb-2">
+      <h4 class="page-title">Danh sách sản phẩm</h4>
+      <a href="/categories/create" class="btn btn-default">Tạo sản phẩm</a>
+    </div>
     <div class="card">
       <div class="card-body">
         <table class="table table-head-bg-success">
