--- a/src/views/layouts/slidebar.ejs
+++ b/src/views/layouts/slidebar.ejs
@@ -37,7 +37,7 @@
     </div>
     <ul class="nav">
       <li class="nav-item active">
-        <a href="/category">
+        <a href="/categories">
           <i class="la la-dashboard"></i>
           <p>Category</p>
         </a>
