--- a/src/views/components/categories/form.ejs
+++ b/src/views/components/categories/form.ejs
@@ -7,6 +7,9 @@
       <% if (mode === "Update"){ %>
         Cap nhap san pham
       <% }; %>
+      <% if (mode === "Delete"){ %>
+        Ban co dong y xoa san pham <%=category?.name%>
+      <% }; %>
     </h4>
     <div class="card">
       <div class="card-body">
@@ -15,6 +18,18 @@
         <% }; %>
         <% if (mode === "Update"){ %>
           <form action="/categories/update" method="post"> 
+            <div class="form-group hide">
+              <label for="code">Mã sản phẩm</label>
+              <input 
+                name="id"
+                type="text"
+                value="<%=category?._id%>"
+                id="id"
+              />
+            </div>
+        <% }; %>
+        <% if (mode === "Delete"){ %>
+          <form action="/categories/Delete" method="post"> 
             <div class="form-group hide">
               <label for="code">Mã sản phẩm</label>
               <input 
@@ -34,28 +49,31 @@
               class="form-control"
               id="code"
               placeholder="nhập mã sản phẩm"
-            />
-          </div>
-          <div class="form-group">
-            <label for="name">tên sản phẩm</label>
-            <input 
+              disabled="<%=mode==='Delete' ? true : false%>"
+              />
+            </div>
+            <div class="form-group">
+              <label for="name">tên sản phẩm</label>
+              <input 
               name="name"
               type="text"
               value="<%=category?.name%>"
               class="form-control"
               id="name"
               placeholder="nhập tên sản phẩm"
-            >
-          </div>
-          <div class="form-group">
-            <label for="image">Link hình ảnh</label>
-            <input 
+              disabled="<%=mode==='Delete' ? true : false%>"
+              >
+            </div>
+            <div class="form-group">
+              <label for="image">Link hình ảnh</label>
+              <input 
               name="image"
               type="text"
               value="<%=category?.image%>"
               class="form-control"
               id="image"
               placeholder="Nhập link image"
+              disabled="<%=mode==='Delete' ? true : false%>"
             >
           </div>
           <div class="card-action">
@@ -63,7 +81,10 @@
               <button class="btn btn-success" type="submit">Tao</button>
             <% }; %>
             <% if (mode === "Update"){ %>
-              <button class="btn btn-success" type="submit">Cap nhap</button>
+              <button class="btn btn-success" type="submit">Sua</button>
+            <% }; %>
+            <% if (mode === "Delete"){ %>
+              <button class="btn btn-danger" type="submit">Xoa</button>
             <% }; %>
             
             <button class="btn btn-danger">Tro ve</button>
