--- a/src/views/components/categories/form.ejs
+++ b/src/views/components/categories/form.ejs
@@ -48,8 +48,10 @@
               value="<%=category?.code%>"
               class="form-control"
               id="code"
-              placeholder="nhập mã sản phẩm"
-              disabled="<%=mode==='Delete' ? true : false%>"
+              placeholder="nhập mã sản phẩm categoryInput"
+              <% if (mode === 'Delete'){%>
+                disabled
+              <%}%>
               />
             </div>
             <div class="form-group">
@@ -58,10 +60,26 @@
               name="name"
               type="text"
               value="<%=category?.name%>"
-              class="form-control"
+              class="form-control categoryInput"
               id="name"
               placeholder="nhập tên sản phẩm"
-              disabled="<%=mode==='Delete' ? true : false%>"
+              <% if (mode === 'Delete'){%>
+                disabled
+              <%}%>
+              >
+            </div>
+            <div class="form-group">
+              <label for="search">Chuỗi tìm kiếm</label>
+              <input 
+              name="searchString"
+              type="text"
+              value="<%=category?.searchString%>"
+              class="form-control categoryInput"
+              id="searchString"
+              placeholder="nhập tên chuỗi"
+              <% if (mode === 'Delete'){%>
+                disabled
+              <%}%>
               >
             </div>
             <div class="form-group">
@@ -70,10 +88,12 @@
               name="image"
               type="text"
               value="<%=category?.image%>"
-              class="form-control"
+              class="form-control categoryInput"
               id="image"
               placeholder="Nhập link image"
-              disabled="<%=mode==='Delete' ? true : false%>"
+              <% if (mode === 'Delete'){%>
+                disabled
+              <%}%>
             >
           </div>
           <div class="card-action">
