pagination and page size

--- a/src/views/pages/categories/list.ejs
+++ b/src/views/pages/categories/list.ejs
@@ -25,4 +25,5 @@
 </body>
 <!--//script-->
 <%- include('../../layouts/script/main'); %>
+<%- include('../../layouts/script/listCategory'); %>
 </html>
