--- a/src/views/components/categories/list.ejs
+++ b/src/views/components/categories/list.ejs
@@ -5,39 +5,83 @@
       <a href="/categories/create" class="btn btn-default">Tạo sản phẩm</a>
     </div>
     <% if (categories && categories.length>0) { %>
-    <div class="card">
-      <div class="card-body">
-        <table class="table table-head-bg-success">
-          <thead>
-            <tr>
-              <th scope="col">STT</th>
-              <th scope="col">image</th>
-              <th scope="col">code</th>
-              <th scope="col">name</th>
-              <th scope="col"></th>
-            </tr>
-          </thead>
-          <tbody>
-            <% categories.forEach(function(category, index){ %>
+      <div class="card">
+        <div class="card-body">
+          <table class="table table-head-bg-success">
+            <thead>
               <tr>
-                <td><%=index%></td>
-                <td>
-                  <img src="<%=category.image%>" alt="image" class="category-label">
-                </td>
-                <td><%=category.code%></td>
-                <td><%=category.name%></td>
-                <td>
-                  <a class="btn btn-primary btn-sm" href="/categories/update/<%=category._id%>">Sua</a>
-                  <a class="btn btn-danger btn-sm" href="/categories/delete/<%=category._id%>">Xoa</a>
-                </td>
+                <th scope="col">STT</th>
+                <th scope="col">image</th>
+                <th scope="col">code</th>
+                <th scope="col">name</th>
+                <th scope="col"></th>
               </tr>
+            </thead>
+            <tbody>
+              <% categories.forEach(function(category, index){ %>
+                <tr>
+                  <td>
+                    <%=index%>
+                  </td>
+                  <td>
+                    <img src="<%=category.image%>" alt="image" class="category-label">
+                  </td>
+                  <td>
+                    <%=category.code%>
+                  </td>
+                  <td>
+                    <%=category.name%>
+                  </td>
+                  <td>
+                    <a class="btn btn-primary btn-sm" href="/categories/update/<%=category._id%>">Sua</a>
+                    <a class="btn btn-danger btn-sm" href="/categories/delete/<%=category._id%>">Xoa</a>
+                  </td>
+                </tr>
+                <% }); %>
+            </tbody>
+          </table>
+        </div>
+        <div class="card-body flex justify-content-center items-center">
+          <div class="form-group flex justify-content-center items-center">
+            <label for="defaultSelect" class="while-space">Page Size</label>
+            <select class="form-control form-control" id="defaultSelect" onchange="changePageSize(event)">
+              <% [5,10,20,30,50].forEach(function(pageSizeOption, index){ %>
+                <% if(pageSizeOption === pageSize){%>
+                  <option selected><%=pageSizeOption %></option>
+                <%}%>
+                <% if(pageSizeOption !== pageSize){%>
+                  <option><%=pageSizeOption%></option>
+                <%}%>
               <% }); %>
-          </tbody>
-        </table>
+            </select>
+          </div>
+          <ul class="pagination pg-primary">
+            <li class="page-item">
+              <a class="page-link" aria-label="Previous" onclick="prevPage()">
+                <span aria-hidden="true">&laquo;</span>
+                <span class="sr-only">Previous</span>
+              </a>
+            </li>
+            <% for(let i = 1; i <= countPagination; i++ ){ %>
+              <% if(page === i){%>
+                <li class="page-item active"><a class="page-link" href="#" onclick="changePage(`<%=i%>`)"><%=i%></a></li>
+              <%}%>
+              <% if(page !== i){%>
+                <li class="page-item"><a class="page-link" href="#" onclick="changePage(`<%=i%>`)"><%=i%></a></li>
+              <%}%>
+            <% }; %>
+            <li class="page-item">
+              <a class="page-link" aria-label="Next" onclick="nextPage()">
+                <span aria-hidden="true">&raquo;</span>
+                <span class="sr-only">Next</span>
+              </a>
+            </li>
+          </ul>
+
+        </div>
       </div>
-    </div>
-    <% }else{%>
-      <h5>hiện không có sản phẩm</h5>
-  <% } %>
+      <% }else{%>
+        <h5>hiện không có sản phẩm</h5>
+        <% } %>
   </div>
 </div>
