--- a/src/views/layouts/script/main.ejs
+++ b/src/views/layouts/script/main.ejs
@@ -2,8 +2,8 @@
 <script src="../../../static/assets/js/plugin/jquery-ui-1.12.1.custom/jquery-ui.min.js"></script>
 <script src="../../../static/assets/js/core/popper.min.js"></script>
 <script src="../../../static/assets/js/core/bootstrap.min.js"></script>
-<script src="../../../static/assets/js/plugin/chartist/chartist.min.js"></script>
-<script src="../../../static/assets/js/plugin/chartist/plugin/chartist-plugin-tooltip.min.js"></script>
+<!-- <script src="../../../static/assets/js/plugin/chartist/chartist.min.js"></script>
+<script src="../../../static/assets/js/plugin/chartist/plugin/chartist-plugin-tooltip.min.js"></script> -->
 <script src="../../../static/assets/js/plugin/bootstrap-notify/bootstrap-notify.min.js"></script>
 <script src="../../../static/assets/js/plugin/bootstrap-toggle/bootstrap-toggle.min.js"></script>
 <script src="../../../static/assets/js/plugin/jquery-mapael/jquery.mapael.min.js"></script>
@@ -11,4 +11,4 @@
 <script src="../../../static/assets/js/plugin/chart-circle/circles.min.js"></script>
 <script src="../../../static/assets/js/plugin/jquery-scrollbar/jquery.scrollbar.min.js"></script>
 <script src="../../../static/assets/js/ready.min.js"></script>
-<script src="../../../static/assets/js/demo.js"></script>
+<!-- <script src="../../../static/assets/js/demo.js"></script> -->
