--- a/public/assets/css/demo.css
+++ b/public/assets/css/demo.css
@@ -108,3 +108,12 @@
 .while-space{
 	white-space: nowrap;
 }
+.max-w-10{
+	max-width: 20rem;
+}
+.mb-4px{
+	margin-bottom: 0.5rem;
+}
+.mb-1{
+	margin-bottom:1rem;
+}
