--- a/src/views/components/categories/form.ejs
+++ b/src/views/components/categories/form.ejs
@@ -17,8 +17,8 @@
           <form action="/categories/create" method="post"> 
         <% }; %>
         <% if (mode === "Update"){ %>
-          <form action="/categories/update" method="post"> 
-            <div class="form-group hide">
+          <form action="/categories/update/<%=category?._id%>" method="post"> 
+            <!-- <div class="form-group hide">
               <label for="code">Mã sản phẩm</label>
               <input 
                 name="id"
@@ -26,12 +26,11 @@
                 value="<%=category?._id%>"
                 id="id"
               />
-            </div>
+            </div> -->
         <% }; %>
         <% if (mode === "Delete"){ %>
           <form action="/categories/Delete" method="post"> 
             <div class="form-group hide">
-              <label for="code">Mã sản phẩm</label>
               <input 
                 name="id"
                 type="text"
@@ -40,21 +39,29 @@
               />
             </div>
         <% }; %>
-          <div class="form-group">
+
+        <!-- <div class="form-group has-error has-feedback">
+          <label for="errorInput">Error Input</label>
+          <input type="text" id="errorInput" value="Error" class="form-control">
+          <small id="emailHelp" class="form-text text-muted">Please provide a valid informations.</small>
+        </div> -->
+
+          <div class="form-group <%=err?.code && 'has-error has-feedback'%> ">
             <label for="code">Mã sản phẩm</label>
             <input 
               name="code"
               type="text"
               value="<%=category?.code%>"
-              class="form-control"
+              class="form-control categoryInput"
               id="code"
-              placeholder="nhập mã sản phẩm categoryInput"
+              placeholder="nhập mã sản phẩm "
               <% if (mode === 'Delete'){%>
                 disabled
               <%}%>
               />
+              <small class="form-text text-muted text-danger"><%=err?.code%></small>
             </div>
-            <div class="form-group">
+            <div class="form-group <%=err.name && 'has-error has-feedback'%>">
               <label for="name">tên sản phẩm</label>
               <input 
               name="name"
@@ -66,9 +73,10 @@
               <% if (mode === 'Delete'){%>
                 disabled
               <%}%>
-              >
+              />
+              <small class="form-text text-muted text-danger"><%=err?.name%></small>
             </div>
-            <div class="form-group">
+            <div class="form-group <%=err.searchString && 'has-error has-feedback'%>">
               <label for="search">Chuỗi tìm kiếm</label>
               <input 
               name="searchString"
@@ -80,9 +88,10 @@
               <% if (mode === 'Delete'){%>
                 disabled
               <%}%>
-              >
+              />
+              <small class="form-text text-muted text-danger"><%=err?.searchString%></small>
             </div>
-            <div class="form-group">
+            <div class="form-group <%=err.image && 'has-error has-feedback'%>">
               <label for="image">Link hình ảnh</label>
               <input 
               name="image"
@@ -94,7 +103,8 @@
               <% if (mode === 'Delete'){%>
                 disabled
               <%}%>
-            >
+            />
+            <small class="form-text text-muted text-danger"><%=err?.image%></small>
           </div>
           <div class="card-action">
             <% if (mode === "Create"){ %>
