--- a/public/assets/css/demo.css
+++ b/public/assets/css/demo.css
@@ -117,3 +117,33 @@
 .mb-1{
 	margin-bottom:1rem;
 }
+.w-2{
+	width: 2rem;
+}
+
+.product-checkbox-label{
+	width: 32px;
+	height: 16px;
+	border-radius: 4px;
+	border: 1px solid #000;
+}
+
+.bg-red{
+	background-color: #ff0000;
+}
+.bg-green{
+	background-color: #00ff88;
+}
+.bg-white{
+	background-color: #ffffff;
+}
+.bg-yellow{
+	background-color: #d9ff00;
+}
+.bg-black{
+	background-color: #000000;
+}
+
+.gap-2{
+	gap: 2rem;
+}
