--- a/src/views/layouts/slidebar.ejs
+++ b/src/views/layouts/slidebar.ejs
@@ -43,6 +43,18 @@
         </a>
       </li>
       <li class="nav-item active">
+        <a href="/products">
+          <i class="la la-clone"></i>
+          <p>Products</p>
+        </a>
+      </li>
+      <li class="nav-item active">
+        <a href="/orders">
+          <i class="la la-table"></i>
+          <p>Order</p>
+        </a>
+      </li>
+      <li class="nav-item active">
         <a href="/">
           <i class="la la-dashboard"></i>
           <p>Dashboard</p>
