--- a/src/views/pages/orders/list.ejs
+++ b/src/views/pages/orders/list.ejs
@@ -1,3 +1,5 @@
+<!DOCTYPE html>
+<html>
 <head>
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
 	<title>Ready Bootstrap Dashboard</title>
@@ -6,4 +8,22 @@
 	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i">
 	<link rel="stylesheet" href="../../../static/assets/css/ready.css">
 	<link rel="stylesheet" href="../../../static/assets/css/demo.css">
-</head>	
+</head>
+<body>
+	<div class="wrapper">
+			<!--//main-header-->
+			<%- include('../../layouts/mainheader'); %>
+					<!--//slidebar-->
+					<%- include('../../layouts/slidebar'); %>
+			<div class="main-panel">
+				<%- include('../../components/orders/list'); %>
+				<!--//slidebar-->
+				<%- include('../../layouts/footer'); %>
+			</div>
+		</div>
+	</div>
+
+</body>
+<!--//script-->
+<%- include('../../layouts/script/main'); %>
+</html>
