--- a/src/views/components/orders/list.ejs
+++ b/src/views/components/orders/list.ejs
@@ -2,7 +2,7 @@
   <div class="container-fluid">
     <div class="flex items-center justify-content-between">
       <h4 class="page-title">Danh sách Hóa Đơn</h4>
-      <a href="/products/create" class="btn btn-default">Tạo Hóa Đơn</a>
+      <a href="/orders/create" class="btn btn-default">Giả lập tạo Hóa Đơn</a>
     </div>
     <div class="flex justify-content-end  mb-5">
       <div class="form-group flex full-width items-center">
