--- a/src/views/pages/orders/list.ejs
+++ b/src/views/pages/orders/list.ejs
@@ -26,4 +26,5 @@
 </body>
 <!--//script-->
 <%- include('../../layouts/script/main'); %>
+<%- include('../../layouts/script/listOrder'); %>
 </html>
